--- a/views/pages/scent.ejs
+++ b/views/pages/scent.ejs
@@ -5,18 +5,18 @@
     <link rel="stylesheet" href="/styles/base.css" />
   </head>
   <header>
-    <title>Inventory</title>
+    <title>Scents</title>
   </header>
   <body>
     <table>
       <tr>
         <th>Name</th>
-        <th>Scent</th>
+        <th>Amount</th>
       </tr>
-      <% output.forEach(object=>{ %>
+      <% output.forEach(object =>{ %>
       <tr>
         <td><%= object.name %></td>
-        <td><%= object.scent %></td>
+        <td><%= object.amount %></td>
       </tr>
       <% }) %>
     </table>
