database working as expected, pages rendering

--- a/views/pages/inventory.ejs
+++ b/views/pages/inventory.ejs
@@ -8,6 +8,13 @@
     <title>Inventory</title>
   </header>
   <body>
+    <form action="/addInventory" method="post">
+      <label for="name">Name</label>
+      <input type="text" name="name" />
+      <label for="scent">Scent</label>
+      <input type="text" name="scent" />
+      <button type="submit">Add</button>
+    </form>
     <table>
       <tr>
         <th>Name</th>
