--- a/views/pages/scent.ejs
+++ b/views/pages/scent.ejs
@@ -8,6 +8,13 @@
     <title>Scents</title>
   </header>
   <body>
+    <form action="/addScent" method="post">
+      <label for="name">Name</label>
+      <input type="text" name="name" />
+      <label for="amount">amount</label>
+      <input type="number" name="amount" step="0.01" />
+      <button type="submit">Add</button>
+    </form>
     <table>
       <tr>
         <th>Name</th>
