changed database set up

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -18,13 +18,13 @@
     <menu>
         <ul>
           <div>
-            <i class="fas fa-calculator"></i>
+            <i class="fas fa-calculator"></a></i>
           </div>
           <div>
-              <i class="fas fa-fill-drip"></i>
+              <i class="fas fa-fill-drip"><a href="/scent"></a></i>
             </div>
             <div>
-                <i class="fas fa-list-ul"></i>
+                <i class="fas fa-list-ul"><a href="/inventory"></a></i>
             </div>
             <div>
                 <i class="fas fa-plus-circle"></i>
