--- a/views/pages/scents.ejs
+++ b/views/pages/scents.ejs
@@ -8,10 +8,10 @@
     <title>Scents</title>
   </header>
   <body>
-    <form action="/addScent" method="post">
-      <label for="name">Name</label>
+    <form action="/addScents" method="post">
+      <label for="name">Scent</label>
       <input type="text" name="name" />
-      <label for="amount">amount</label>
+      <label for="amount">Amount</label>
       <input type="number" name="amount" step="0.01" />
       <button type="submit">Add</button>
     </form>
