--- a/views/pages/calc.ejs
+++ b/views/pages/calc.ejs
@@ -5,33 +5,31 @@
     <link rel="stylesheet" href="/styles/base.css" />
   </head>
   <header>
-    <title>Inventory</title>
+    <title>Scents</title>
   </header>
   <body>
-    <form action="/addInventory" method="post">
-      <label for="name">Name</label>
-      <input type="text" name="name" />
-      <label for="scent">Scent</label>
-      <input type="text" name="scent" />
-      <label for="amount">Amount</label>
-      <input type="number" name="amount" step="0.01" />
-      <label for="num">Number</label>
-      <input type="number" name="num" />
+    <form action="/addCalc" method="post">
+      <label for="candle">Choose a candle:</label>
+
+      <select name="candle" id="candle" multiple>
+        <% output.forEach(object=> { %>
+
+          <option value="<%=object.name %>"><%= object.name %></option>
+        <% }) %>
+
+      </select>
+
       <button type="submit">Add</button>
     </form>
     <table>
       <tr>
         <th>Name</th>
-        <th>Scent</th>
         <th>Amount</th>
-        <th>In Stock</th>
       </tr>
-      <% output.forEach(object=>{ %>
+      <% output.forEach(object =>{ %>
       <tr>
         <td><%= object.name %></td>
-        <td><%= object.scent %></td>
         <td><%= object.amount %></td>
-        <td><%= object.num %></td>
       </tr>
       <% }) %>
     </table>
