--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -31,12 +31,12 @@ i {
   transform: translate(34%, 70%);
 }
 
-div:hover {
+/* div:hover {
   background-image: linear-gradient(90deg, #188b8d, white);
 }
 i:hover {
   color: #2c3531;
-}
+} */
 
 .fas {
   font-size: 4vw;
