--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,7 +1,10 @@
-body {
-  margin-top: 20%;
-  margin-left: 10%;
-  background-color: #2c3531;
+html {
+  background-image: linear-gradient(
+    45deg,
+    rgba(168, 216, 69, 1),
+    rgba(5, 79, 91, 1)
+  );
+  height: 100%;
 }
 h1 {
   font-family: 'Orelega One', cursive;
