--- a/views/pages/inventory.ejs
+++ b/views/pages/inventory.ejs
@@ -3,44 +3,49 @@
   <head>
     <%- include('../layouts/head') %>
 
-    <link rel="stylesheet" href="/styles/inventory.css" /> 
+    <link rel="stylesheet" href="/styles/inventory.css" />
   </head>
   <header>
     <h1>Inventory</h1>
   </header>
   <body>
     <form class="updateForm" action="/update" method="post">
-      <label for="name">Choose a candle:</label>
+      <div class="updateF">
+        <!-- <label for="name">Choose a candle:</label> -->
+        <div class="select">
+          <select name="name" id="name">
+            <option value="0">Choose a Candle:</option>
+            <% output.forEach(object=> { %>
 
-      <select name="name" id="name" multiple>
-        <% output.forEach(object=> { %>
+            <option value="<%=object.name %>"><%= object.name %></option>
+            <% }) %>
+          </select>
+        </div>
+        <br />
 
-        <option value="<%=object.name %>"><%= object.name %></option>
-        <% }) %>
-      </select>
+        <label for="amount">Amount</label>
+        <input type="radio" id="amount" name="column" value="amount" /><br />
+        <label for="num">In Stock</label>
+        <input type="radio" id="num" name="column" value="num" /><br />
 
-      <input type="radio" id="amount" name="column" value="amount" />
-      <label for="amount">Amount</label><br />
-      <input type="radio" id="num" name="column" value="num" />
-      <label for="num">In Stock</label><br />
+        <label for="value">Value</label>
+        <input type="number" name="value" step="0.01" /> <br />
 
-      <label for="value">Value</label>
-      <input type="number" name="value" step="0.01" />
-
-      <button type="submit">Update</button>
+        <button type="submit">Update</button>
+      </div>
     </form>
 
     <form class="addForm" action="/addInventory" method="post">
       <div class="addF">
-      <label for="name">Name</label>
-      <input type="text" name="name" /></br>
-      <label for="scent">Scent</label>
-      <input type="text" name="scent" /></br>
-      <label for="amount">Amount</label>
-      <input type="number" name="amount" step="0.01" /></br>
-      <label for="num">Number</label>
-      <input type="number" name="num" /></br>
-      <button type="submit">Add</button>
+        <label for="name">Name:</label>
+        <input type="text" name="name" /><br />
+        <label for="scent">Scent:</label>
+        <input type="text" name="scent" /><br />
+        <label for="amount">Amount:</label>
+        <input type="number" name="amount" step="0.01" /><br />
+        <label for="num">In Stock:</label>
+        <input type="number" name="num" /><br />
+        <button type="submit">Add</button>
       </div>
     </form>
     <table>
@@ -62,7 +67,7 @@
       <% }) %>
     </table>
   </body>
-  <footer><%- include('../layouts/footer') %></footer>
+  <!-- <footer><%- include('../layouts/footer') %></footer> -->
   <script
     src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
