--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -6,24 +6,32 @@ html {
   );
   height: 100%;
 }
-h1 {
-  font-family: 'Orelega One', cursive;
-  font-weight: 100;
-  margin-bottom: 100px;
-  font-size: 6vw;
+
+header {
+  font-family: 'Mukta', sans-serif;
+  height: 20vh;
+  color: #fff;
+  font-size: 5vw;
+  margin-left: 5vw;
+  margin-top: 2vh;
+}
+
+ul {
+  margin: auto;
+  width: 41vw;
 }
 
 div {
   width: 10vw;
-  background-image: linear-gradient(90deg, #2c3531, white);
+  /* background-image: linear-gradient(90deg, #2c3531, white); */
   height: 10vw;
-  border-radius: 50%;
+  /* border-radius: 50%; */
   text-align: center;
   line-height: 17vw;
   display: inline-block;
   position: relative;
   box-shadow: 5px 6px 10px 2px rgba(41, 41, 44, 0.2);
-  margin-right: 7%;
+  /* margin-right: 7%; */
 }
 
 i {
@@ -34,16 +42,16 @@ i {
   transform: translate(34%, 70%);
 }
 
-/* div:hover {
-  background-image: linear-gradient(90deg, #188b8d, white);
+div:hover {
+  box-shadow: 5px 6px 10px 2px rgba(0, 0, 0, 0);
 }
-i:hover {
+/* i:hover {
   color: #2c3531;
 } */
 
 .fas {
   font-size: 4vw;
-  color: #188b8d;
+  color: #fff;
 }
 
 a {
