--- a/views/pages/final.ejs
+++ b/views/pages/final.ejs
@@ -18,7 +18,8 @@
     <h1>ReBottle Inventory System</h1>
   </header>
   <body>
-    <menu>
+      <%= final %>
+    <!-- <menu>
       <ul>
         <div>
           <a href="/calc">
@@ -39,7 +40,7 @@
           <i class="fas fa-exclamation-triangle"></i>
         </div>
       </ul>
-    </menu>
+    </menu> -->
   </body>
   <!-- <footer><%- include('../layouts/footer') %></footer> -->
   <script
