working on page to show final weight

--- a/views/pages/final.ejs
+++ b/views/pages/final.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%- include('../layouts/head') %>
-    <link rel="stylesheet" href="/styles/home.css" />
+    <link rel="stylesheet" href="/styles/final.css" />
     <script
       src="https://kit.fontawesome.com/fc85feb03c.js"
       crossorigin="anonymous"
@@ -14,11 +14,10 @@
       rel="stylesheet"
     />
   </head>
-  <header>
-    <h1>ReBottle Inventory System</h1>
-  </header>
   <body>
+      <a href="/calc">
       <%= final %>
+      </a>
     <!-- <menu>
       <ul>
         <div>
