--- a/views/pages/calc.ejs
+++ b/views/pages/calc.ejs
@@ -17,7 +17,7 @@
 
         <option value="<%=object.name %>"><%= object.name %></option>
         <% }) %>
-        <label for="candle">First Weight:</label>
+        <label for="www">First Weight:</label>
         <input type="number" step="0.01" name="www"/>
       </select>
 
