working on scents page server and pages mixed up

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -31,7 +31,7 @@
           </a>
         </div>
         <div>
-          <a href="/inventory">
+          <a href="/alert">
             <i class="fas fa-list-ul"></i>
           </a>
         </div>
