--- a/views/pages/scents1.ejs
+++ b/views/pages/scents1.ejs
@@ -34,7 +34,7 @@
           </a>
         </div>
         <div>
-          <a href="/alert">
+          <a href="/inventory">
             <i class="fas fa-exclamation-triangle"></i>
           </a>
         </div>
@@ -55,14 +55,15 @@
           </select>
         </div>
         <br />
+        <div class="selectScent">
+          <select name="name" id="name">
+            <option value="0">Choose a Scent:</option>
+            <% output.forEach(object=> { %>
 
-        <label for="amount">Amount</label>
-        <input type="radio" id="amount" name="column" value="amount" /><br />
-        <label for="num">In Stock</label>
-        <input type="radio" id="num" name="column" value="num" /><br />
-
-        <label for="value">Value</label>
-        <input type="number" name="value" step="0.01" /> <br />
+            <option value="<%=object.scent %>"><%= object.scent %></option>
+            <% }) %>
+          </select>
+        </div>
 
         <button type="submit">Update</button>
       </div>
@@ -70,32 +71,28 @@
 
     <form class="addForm" action="/addInventory" method="post">
       <div class="addF">
-        <label for="name">Name:</label>
-        <input type="text" name="name" /><br />
         <label for="scent">Scent:</label>
         <input type="text" name="scent" /><br />
+        <label for="association">Association:</label>
+        <input type="text" name="association" /><br />
         <label for="amount">Amount:</label>
         <input type="number" name="amount" step="0.01" /><br />
-        <label for="num">In Stock:</label>
-        <input type="number" name="num" /><br />
         <button type="submit">Add</button>
       </div>
     </form>
     <table>
       <thead>
         <tr>
-          <th>Name</th>
           <th>Scent</th>
+          <th>Association</th>
           <th>Amount</th>
-          <th>In Stock</th>
         </tr>
       </thead>
       <% output.forEach(object=>{ %>
       <tr>
-        <td><%= object.name %></td>
         <td><%= object.scent %></td>
+        <td><%= object.association %></td>
         <td><%= object.amount %></td>
-        <td><%= object.num %></td>
       </tr>
       <% }) %>
     </table>
