--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -31,12 +31,14 @@
           </a>
         </div>
         <div>
-          <a href="/alert">
+          <a href="/inventory">
             <i class="fas fa-list-ul"></i>
           </a>
         </div>
         <div>
-          <i class="fas fa-exclamation-triangle"></i>
+          <a href="/alert">
+            <i class="fas fa-exclamation-triangle"></i>
+          </a>
         </div>
       </ul>
     </menu>
