--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -1,3 +1,16 @@
-<title>Candle Inventory</title>
-<link rel="stylesheet" href="/styles/reset.css" />
-<!-- <link rel="stylesheet" href="/styles/base.css" /> -->
+<head>
+  <script
+    src="https://kit.fontawesome.com/fc85feb03c.js"
+    crossorigin="anonymous"
+  ></script>
+  <link rel="stylesheet" href="/styles/reset.css" />
+  <link rel="stylesheet" href="/styles/base.css" />
+  <link rel="stylesheet" href="/styles/input.css" />
+  <!-- <link rel="stylesheet" href="/styles/inventory.css" /> -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Mukta:wght@200&display=swap"
+    rel="stylesheet"
+  />
+</head>
