css files orginized

--- a/public/styles/inventory.css
+++ b/public/styles/inventory.css
@@ -1,4 +1,4 @@
-html {
+/* html {
   background-image: linear-gradient(
     45deg,
     rgba(168, 216, 69, 1),
@@ -190,4 +190,4 @@ a > i {
 
 div:hover {
   box-shadow: 5px 6px 10px 2px rgba(0, 0, 0, 0);
-}
+} */
