--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -5,7 +5,6 @@ html {
     rgba(5, 79, 91, 1)
   );
   font-family: 'Mukta', sans-serif;
-  height: 100%;
 }
 
 header {
@@ -46,4 +45,10 @@ a > i {
 
 div:hover {
   box-shadow: 5px 6px 10px 2px rgba(0, 0, 0, 0);
+}
+
+footer{
+    color: #fff;
+    margin-top: 40vh;
+    text-align: center;
 }
