--- a/public/styles/calc.css
+++ b/public/styles/calc.css
@@ -1,4 +1,4 @@
-html {
+/* html {
   background-image: linear-gradient(
     45deg,
     rgba(168, 216, 69, 1),
@@ -51,4 +51,4 @@ button {
 
 .input {
   margin-top: 3vh;
-}
+} */
