--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -8,53 +8,54 @@ html {
 }
 
 header {
-  font-family: 'Mukta', sans-serif;
-  height: 20vh;
   color: #fff;
+  font-family: 'Mukta', sans-serif;
   font-size: 5vw;
+  height: 20vh;
   margin-left: 5vw;
   margin-top: 2vh;
 }
 
 ul {
   margin: auto;
-  width: 41vw;
+  margin-top: 10vh;
+  width: 44vw;
 }
 
 div {
-  width: 10vw;
-  /* background-image: linear-gradient(90deg, #2c3531, white); */
-  height: 10vw;
-  /* border-radius: 50%; */
-  text-align: center;
-  line-height: 17vw;
-  display: inline-block;
-  position: relative;
   box-shadow: 5px 6px 10px 2px rgba(41, 41, 44, 0.2);
-  /* margin-right: 7%; */
-}
-
-i {
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin-left: 17%;
-  transform: translate(34%, 70%);
+  display: inline-block;
+  height: 10vw;
+  line-height: 17vw;
+  position: relative;
+  text-align: center;
+  width: 10vw;
 }
 
 div:hover {
   box-shadow: 5px 6px 10px 2px rgba(0, 0, 0, 0);
 }
-/* i:hover {
-  color: #2c3531;
-} */
+
+i {
+  left: 0;
+  margin-left: 17%;
+  position: absolute;
+  top: 0;
+  transform: translate(34%, 70%);
+}
 
 .fas {
-  font-size: 4vw;
   color: #fff;
+  font-size: 4vw;
 }
 
 a {
-  width: 100px;
   height: 100px;
+  width: 100px;
+}
+
+footer {
+  color: #fff;
+  margin-top: 70vh;
+  text-align: center;
 }
