--- a/public/styles/input.css
+++ b/public/styles/input.css
@@ -5,7 +5,6 @@ form {
   font-size: 2vw;
   height: 25vh;
   margin: auto;
-  margin-top: 8vh;
   overflow: scroll;
   width: 25vw;
 }
@@ -17,7 +16,29 @@ form > div {
 }
 
 select {
-  margin-bottom: 2vh;
+  background-color: rgba(255, 255, 255, 0.2);
+  border: none;
+  color: #fff;
+  font-size: 1.5vw;
+  height: 4vh;
+  margin: auto;
+  text-align: center;
+  width: 105%;
+}
+
+input[type='radio'] {
+  height: 1.25em;
+  size: 30px;
+  width: 1.25em;
+}
+
+input {
+  background-color: rgba(255, 255, 255, 0.2);
+  border: none;
+  color: #fff;
+  font-size: 1.5vw;
+  margin-bottom: 1vh;
+  width: 8vw;
 }
 
 button {
@@ -26,6 +47,25 @@ button {
   color: #fff;
   font-size: 1.25vw;
   height: 4vh;
-  margin-top: 5vh;
+  margin-bottom: 1vh;
+  margin-top: 3vh;
   width: fit-content;
+}
+
+button:hover {
+  background-color: rgba(168, 216, 69, 1);
+}
+
+/* ---------- INVENTORY ---------- */
+
+.addForm {
+  float: right;
+  margin-bottom: 5vh;
+  margin-right: 15vw;
+}
+
+.updateForm {
+  float: left;
+  margin-bottom: 5vh;
+  margin-left: 15vw;
 }
