--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,1 +1,10 @@
-<span>TO COME!</span>
+<footer>
+    <h4> © 2021 CopyRight: ReBottleWA.com </h4>
+    <h5> Created By: Reagan Roberts </h5>
+    <script
+  src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+  crossorigin="anonymous"
+></script>
+<script src="/js/app.js"></script>
+</footer>
