--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="/styles/reset.css" />
   <link rel="stylesheet" href="/styles/base.css" />
   <link rel="stylesheet" href="/styles/input.css" />
+  <link rel="stylesheet" href="/styles/tables.css" />
   <!-- <link rel="stylesheet" href="/styles/inventory.css" /> -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
