--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,53 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <%- include('../layouts/head') %>
-    <link rel="stylesheet" href="/styles/home.css" />
-    <script
-      src="https://kit.fontawesome.com/fc85feb03c.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Mukta:wght@200&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <header>
-    <h1>ReBottle Inventory System</h1>
-  </header>
-  <body>
-    <menu>
-      <ul>
-        <div>
-          <a href="/calc">
-            <i class="fas fa-calculator"></i>
-          </a>
-        </div>
-        <div>
-          <a href="/scents">
-            <i class="fas fa-fill-drip"></i>
-          </a>
-        </div>
-        <div>
-          <a href="/inventory">
-            <i class="fas fa-list-ul"></i>
-          </a>
-        </div>
-        <div>
-          <a href="/alert">
-            <i class="fas fa-exclamation-triangle"></i>
-          </a>
-        </div>
-      </ul>
-    </menu>
-  </body>
-  <!-- <footer><%- include('../layouts/footer') %></footer> -->
+<head>
   <script
-    src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    src="https://kit.fontawesome.com/fc85feb03c.js"
     crossorigin="anonymous"
   ></script>
-  <script src="/js/app.js"></script>
+  <link rel="stylesheet" href="/styles/reset.css" />
+  <link rel="stylesheet" href="/styles/home.css" />
+  <!-- <link rel="stylesheet" href="/styles/inventory.css" /> -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Mukta:wght@200&display=swap"
+    rel="stylesheet"
+  />
+</head>
+<%- include('../layouts/header') %>
+<%- include('../layouts/footer') %>
 </html>
