--- a/views/pages/inventory.ejs
+++ b/views/pages/inventory.ejs
@@ -1,46 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <%- include('../layouts/head') %>
-    <script
-      src="https://kit.fontawesome.com/fc85feb03c.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="/styles/inventory.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Mukta:wght@200&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <header>
-    <h1>Inventory</h1>
-    <menu>
-      <ul>
-        <div>
-          <a href="/calc">
-            <i class="fas fa-calculator"></i>
-          </a>
-        </div>
-        <div>
-          <a href="/scents">
-            <i class="fas fa-fill-drip"></i>
-          </a>
-        </div>
-        <div>
-          <a href="/">
-            <i class="fas fa-home"></i>
-          </a>
-        </div>
-        <div>
-          <a href="/alert">
-            <i class="fas fa-exclamation-triangle"></i>
-          </a>
-        </div>
-      </ul>
-    </menu>
-  </header>
+  <%- include('../layouts/head') %> <%- include('../layouts/header') %>
   <body>
     <form class="updateForm" action="/update" method="post">
       <div class="updateF">
@@ -100,11 +60,5 @@
       <% }) %>
     </table>
   </body>
-  <!-- <footer><%- include('../layouts/footer') %></footer> -->
-  <script
-    src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-    crossorigin="anonymous"
-  ></script>
-  <script src="/js/app.js"></script>
+  <footer><%- include('../layouts/footer') %></footer>
 </html>
