scent page done ability to add scents

--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -3,23 +3,23 @@
     <menu>
       <ul>
         <div>
-          <a href="/calc">
-            <i class="fas fa-calculator"></i>
+          <a href="/<%= one %>">
+            <i class="fas <%= oneA %>"></i>
           </a>
         </div>
         <div>
-          <a href="/scents">
-            <i class="fas fa-fill-drip"></i>
+          <a href="/<%= two %>">
+            <i class="fas <%= twoA %>"></i>
           </a>
         </div>
         <div>
-          <a href="/">
-            <i class="fas fa-home"></i>
+          <a href="/<%= three %>">
+            <i class="fas <%= threeA %>"></i>
           </a>
         </div>
         <div>
-          <a href="/alert">
-            <i class="fas fa-exclamation-triangle"></i>
+          <a href="/<%= four %>">
+            <i class="fas <%= fourA %>"></i>
           </a>
         </div>
       </ul>
