--- a/views/pages/calc.ejs
+++ b/views/pages/calc.ejs
@@ -7,37 +7,20 @@
         <select name="candle" id="candle">
           <option value="0">Choose a Candle:</option>
           <% output.forEach(object=> { %>
-
           <option value="<%=object.name %>"><%= object.name %></option>
           <% }) %>
         </select>
         <br />
         <div class="input">
-          <label for="www">Start Weight:</label><br />
-          <input type="number" step="0.01" name="www" /><br />
+          <label for="www">Start Weight:</label>
+          <br />
+          <input type="number" step="0.01" name="www" />
+          <br />
         </div>
         <button class="wwwButton" type="submit">Calculate</button>
       </div>
     </form>
     <h3 class="answer"></h3>
-    <!-- <table>
-      <tr>
-        <th>Name</th>
-        <th>Amount</th>
-      </tr>
-      <% output.forEach(object =>{ %>
-      <tr>
-        <td><%= object.name %></td>
-        <td><%= object.amount %></td>
-      </tr>
-      <% }) %>
-    </table> -->
   </body>
-  <footer><%- include('../layouts/footer') %></footer>
-  <script
-    src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-    crossorigin="anonymous"
-  ></script>
-  <script src="/js/app.js"></script>
+  <%- include('../layouts/footer') %>
 </html>
