--- a/views/pages/inventory.ejs
+++ b/views/pages/inventory.ejs
@@ -4,40 +4,41 @@
   <body>
     <form class="updateForm" action="/update" method="post">
       <div class="updateF">
-        <!-- <label for="name">Choose a candle:</label> -->
         <div class="select">
           <select name="name" id="name">
             <option value="0">Choose a Candle:</option>
             <% output.forEach(object=> { %>
-
             <option value="<%=object.name %>"><%= object.name %></option>
             <% }) %>
           </select>
         </div>
         <br />
-
         <label for="amount">Amount</label>
-        <input type="radio" id="amount" name="column" value="amount" /><br />
+        <input type="radio" id="amount" name="column" value="amount" />
+        <br />
         <label for="num">In Stock</label>
-        <input type="radio" id="num" name="column" value="num" /><br />
-
+        <input type="radio" id="num" name="column" value="num" />
+        <br />
         <label for="value">Value</label>
-        <input type="number" name="value" step="0.01" /> <br />
-
+        <input type="number" name="value" step="0.01" />
+        <br />
         <button type="submit">Update</button>
       </div>
     </form>
-
     <form class="addForm" action="/addInventory" method="post">
       <div class="addF">
         <label for="name">Name:</label>
-        <input type="text" name="name" /><br />
+        <input type="text" name="name" />
+        <br />
         <label for="scent">Scent:</label>
-        <input type="text" name="scent" /><br />
+        <input type="text" name="scent" />
+        <br />
         <label for="amount">Amount:</label>
-        <input type="number" name="amount" step="0.01" /><br />
+        <input type="number" name="amount" step="0.01" />
+        <br />
         <label for="num">In Stock:</label>
-        <input type="number" name="num" /><br />
+        <input type="number" name="num" />
+        <br />
         <button type="submit">Add</button>
       </div>
     </form>
@@ -60,5 +61,5 @@
       <% }) %>
     </table>
   </body>
-  <footer><%- include('../layouts/footer') %></footer>
+  <%- include('../layouts/footer') %>
 </html>
